--- a/app/frontend/css/layout.css
+++ b/app/frontend/css/layout.css
@@ -875,6 +875,10 @@ body .ftf-yuan {
   vertical-align: middle;
 }
 
+.dp-tbl-cel.bottom {
+  vertical-align: bottom;
+}
+
 .dp-tbl-cel.top {
   vertical-align: top;
 }
@@ -882,11 +886,11 @@ body .ftf-yuan {
 .border-h {
   width: 100%;
   height: 1px;
-  background: #F2F2F2;
+  background: #e5e5e5;
 }
 
 .border-v {
-  background: #F2F2F2;
+  background: #e5e5e5;
   width: 1px;
   height: 100%;
 }
@@ -998,36 +1002,36 @@ body .ftf-yuan {
 
 .my-button--red,
 .my-form-group input.my-button.my-button--red {
-  background: #eb5c4a;
+  background: #ff5a5e;
   color: #fff !important;
 }
 
 .my-button--red:hover,
 .my-form-group input.my-button.my-button--red:hover {
-  background: #eb5c4a;
+  background: #ff797d;
 }
 
 .my-button--red:active,
 .my-form-group input.my-button.my-button--red:active {
-  background: #eb5c4a;
+  background: #ff797d;
 }
 
 .my-button--red-border,
 .my-form-group input.my-button.my-button--red-border {
-  color: #eb5c4a !important;
-  border: 1px solid #eb5c4a;
+  color: #ff5a5e !important;
+  border: 1px solid #ff5a5e;
 }
 
 .my-button--red-border:hover,
 .my-form-group input.my-button.my-button--red-border:hover {
-  color: #eb5c4a !important;
-  border: 1px solid #eb5c4a;
+  color: #ff5a5e !important;
+  border: 1px solid #ff797d;
 }
 
 .my-button--red-border:active,
 .my-form-group input.my-button.my-button--red-border:active {
-  color: #eb5c4a !important;
-  border: 1px solid #eb5c4a;
+  color: #ff5a5e !important;
+  border: 1px solid #ff797d;
 }
 
 .my-button--rose-red,
@@ -1196,7 +1200,7 @@ body .ftf-yuan {
 
 .my-button--red-text,
 .my-form-group input.my-button.my-button--red-text {
-  color: #eb5c4a !important;
+  color: #ff5a5e !important;
 }
 
 .my-button--red-text:hover,
