--- a/app/views/layout/layout.pug
+++ b/app/views/layout/layout.pug
@@ -28,7 +28,9 @@ html
     script.
       window.CSRF = !{ JSON.stringify(csrf) };
       window.LOCALE = !{ JSON.stringify(locale) };
-      window.USERINFO = !{ JSON.stringify(currentUser) };
+      window.USER_INFO = !{ JSON.stringify(currentUser) };
+      window.CAPTCHA_DATA = !{ JSON.stringify(captchaData) };
+      window.QINIU_DOMAIN = !{ JSON.stringify(qiniuDomain) }
     script(src='/static/js/plupload.full.min.js')
     script(src='https://cdn.staticfile.org/qiniu-js-sdk/1.0.14-beta/qiniu.min.js')
     script(src=helpers.vendorAssetUrl('react_vendors.js'))
@@ -40,7 +42,9 @@ html
     script.
       window.CSRF = !{ JSON.stringify(csrf) };
       window.LOCALE = !{ JSON.stringify(locale) };
-      window.USERINFO = !{ JSON.stringify(currentUser) };
+      window.USER_INFO = !{ JSON.stringify(currentUser) };
+      window.CAPTCHA_DATA = !{ JSON.stringify(captchaData) };
+      window.QINIU_DOMAIN = !{ JSON.stringify(qiniuDomain) }
     script(src='/static/js/plupload.full.min.js')
     script(src='https://cdn.staticfile.org/qiniu-js-sdk/1.0.14-beta/qiniu.min.js')
     script(src=helpers.vendorAssetUrl('react_vendors.js'))
