--- a/app/frontend/css/index.css
+++ b/app/frontend/css/index.css
@@ -175,6 +175,58 @@
   margin-left: auto;
 }
 
+.avatar-picker {
+  width: 50px;
+  height: 50px;
+  margin: 0 auto;
+}
+
+.avatar-holder {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  overflow: hidden;
+  border: 1px solid #ababab;
+  position: relative;
+}
+
+.avatar-holder.empty {
+  padding-top: 6px;
+}
+
+.camera-mask {
+  width: 100%;
+  height: 100%;
+  transition: background .4s;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate3d(-50%, -50%, 0);
+  transform: translate(-50%, -50%)\9;
+  background: transparent;
+}
+
+.avatar-holder:hover .camera-mask {
+  background: rgba(134, 134, 134, .5);
+}
+
+.avatar-holder.preview .icon,
+.avatar-holder:hover .icon {
+  color: #fff;
+}
+
+.avatar-holder .icon {
+  font-size: 25px;
+  color: #888888;
+  transition: color .4s;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate3d(-50%, -50%, 0);
+  transform: translate(-50%, -50%)\9;
+}
+
 .avatar img {
   width: 100%;
   height: auto;
