--- a/app/frontend/css/index.css
+++ b/app/frontend/css/index.css
@@ -62,6 +62,7 @@
 
 .user-nav__item {
   display: inline-block;
+  vertical-align: middle;
 }
 
 .mo-nav-column__item .mo-nav-column__item.user-nav {
@@ -230,6 +231,11 @@
 .avatar img {
   width: 100%;
   height: auto;
+}
+
+.user-nav__item .avatar-container {
+  width: 30px;
+  height: 30px;
 }
 
 
