--- a/app/views/layout/layout.pug
+++ b/app/views/layout/layout.pug
@@ -14,6 +14,7 @@ html
     meta(name="csrf-param" content="_csrf")
     meta(name="csrf-token" content=csrf)
   body
+    #spin-loader.spin-loader
     block content
     footer.footer
     <!--[if lte IE 8]>
