--- a/app/frontend/css/index.css
+++ b/app/frontend/css/index.css
@@ -1,3 +1,9 @@
+.nav.gradient {
+  background: linear-gradient(top, rgba(0, 0, 0, 0.65) 0%, rgba(255, 255, 255, 0) 100%);
+  /* FF3.6-15 */
+  /*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00ffffff',GradientType=0 );*/
+}
+
 .nav {
   position: fixed;
   z-index: 1;
@@ -5,9 +11,7 @@
   padding: 10px 20px;
   top: 0;
   display: table;
-  background: linear-gradient(top, rgba(0, 0, 0, 0.65) 0%, rgba(255, 255, 255, 0) 100%);
-  /* FF3.6-15 */
-  /*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00ffffff',GradientType=0 );*/
+  background: #4a4a4a;
 }
 
 .menu__item {
@@ -289,9 +293,20 @@
 
 /*end of login*/
 
+.page-content{
+  height: 100%;
+}
+
 .core-content {
-  margin-top: 90px;
-  padding: 10px;
+  padding: 79px 10px 0;
+}
+
+.core-content.no-margin {
+  margin: 0;
+}
+
+.core-content.no-padding {
+  padding: 0;
 }
 
 
