--- a/app/frontend/css/articles.css
+++ b/app/frontend/css/articles.css
@@ -3,3 +3,86 @@
   background-size: cover;
   background-position: 50% 50%;
 }
+
+.page-content.article .row-wrapper {
+  margin: 10px 0;
+}
+
+.DraftEditor-root img {
+  max-width: 30%;
+}
+
+.page-content.article .core {
+  padding: 20px;
+}
+
+.cover-picker {
+  width: 300px;
+  height: 300px;
+  margin: 0 auto;
+}
+
+.cover-holder {
+  width: 100%;
+  height: 100%;
+  border-radius: 2px;
+  overflow: hidden;
+  border: 1px solid #ababab;
+  position: relative;
+}
+
+.cover-holder.empty {
+  padding-top: 6px;
+}
+
+.cover-picker .camera-mask {
+  width: 100%;
+  height: 100%;
+  transition: background .4s;
+  border-radius: 2px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate3d(-50%, -50%, 0);
+  transform: translate(-50%, -50%)\9;
+  background: transparent;
+}
+
+.cover-holder:hover .camera-mask {
+  background: rgba(134, 134, 134, .5);
+}
+
+.cover-holder.preview .icon {
+  color: rgba(255, 255, 255, .45);
+}
+
+.cover-holder:hover .icon {
+  color: rgba(255, 255, 255, 1);
+}
+
+.cover-holder .icon {
+  font-size: 100px;
+  color: #888888;
+  transition: color .4s;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate3d(-50%, -50%, 0);
+  transform: translate(-50%, -50%)\9;
+}
+
+.cover img {
+  width: 100%;
+  height: auto;
+}
+
+.page-content.article .submit-button {
+  float: right;
+}
+
+@media only screen and (max-width: 990px) {
+  .page-content.article .submit-button {
+    width: 100%;
+    float: none;
+  }
+}
