--- a/app/frontend/css/index.css
+++ b/app/frontend/css/index.css
@@ -145,11 +145,92 @@
   vertical-align: middle;
 }
 
+.slide-modal.visible {
+  transform: translate3d(0, 0, 0);
+  transform: translate(0, 0)\9;
+}
+
+.slide-modal {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #f8f8f8;
+  z-index: 24;
+  transition: transform .4s;
+  transform: translate3d(-100%, 0, 0);
+  transform: translate(-100%, 0)\9;
+}
+
+.slide-modal .close{
+  position: absolute;
+  right: 10px;
+  top: 10px;
+}
+
+.slide-modal .close .icon{
+  font-size: 30px;
+}
+
 .section.intros {
   /*background: url('../img/home-0.jpg');*/
   /*background: url('../img/home-1.jpg');*/
   /*background: url('../img/home-2.jpg');*/
   background: url('../img/home-3.jpg');
+  background-size: cover;
+  background-position: 50% 50%;
+}
+
+.section.design .slide {
+  text-align: center;
+  color: #fff;
+  font-size: 2.5em;
+  text-shadow: 0px 0px 19px #969696;
+}
+
+.section.design .slide .title .icon {
+  font-size: 40px;
+  margin-left: 20px;
+  vertical-align: middle;
+}
+
+.section.design .slide .title {
+  cursor: pointer;
+}
+
+.section.design .slide .title .text:hover {
+  text-decoration: underline;
+}
+
+.section.design .logo-design {
+  background: url('../img/stile.jpg');
+  background-size: cover;
+  background-position: 50% 50%;
+}
+
+.section.design .industrial-design {
+  background: url('../img/industrial-design.jpg');
+  background-size: cover;
+  background-position: 50% 50%;
+}
+
+.section.design .graphic-design {
+  background: url('../img/graphic-design.jpg');
+  background-size: cover;
+  background-position: 50% 50%;
+}
+
+.section.design .web-design {
+  background: url('../img/web-design.jpg');
+  background-size: cover;
+  background-position: 50% 50%;
+}
+
+.section.design .photograph {
+  background: url('../img/home-0.jpg');
   background-size: cover;
   background-position: 50% 50%;
 }
@@ -423,11 +504,10 @@ html.fp-enabled,
   cursor: pointer;
   width: 0;
   height: 0;
-  border-style: solid;
-  margin-top: -38px;
-  -webkit-transform: translate3d(0, 0, 0);
-  -ms-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
+  transform: translate3d(0, -50%, 0);
+  transform: translate(0, -50%)/9;
+  /*border-style: solid;*/
+  /*margin-top: -38px;*/
 }
 
 .fp-controlArrow.fp-prev {
@@ -437,10 +517,41 @@ html.fp-enabled,
   border-color: transparent #f8f8f8 transparent transparent;
 }
 
+.fp-controlArrow.fp-prev:after {
+  content: '\e93f';
+  left: 0;
+}
+
+.fp-controlArrow.fp-next:after {
+  content: '\e940';
+  right: 0;
+}
+
+.fp-controlArrow.fp-prev:after,
+.fp-controlArrow.fp-next:after {
+  color: #fff;
+  text-shadow: 0px 0px 19px rgba(150, 150, 150, 1);
+  position: absolute;
+  font-size: 3em;
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  -webkit-font-feature-settings: normal;
+  font-feature-settings: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  top: 50%;
+  transform: translate3d(0, -50%, 0);
+  transform: translate(0, -50%)/9;
+}
+
 .fp-controlArrow.fp-next {
   right: 15px;
-  border-width: 38.5px 0 38.5px 34px;
-  border-color: transparent transparent transparent #f8f8f8;
+  /*  border-width: 38.5px 0 38.5px 34px;
+  border-color: transparent transparent transparent #f8f8f8;*/
 }
 
 .fp-scrollable {
@@ -544,7 +655,7 @@ html.fp-enabled,
   height: 4px;
   width: 4px;
   border: 0;
-  background: #333;
+  background: #fff;
   left: 50%;
   top: 50%;
   margin: -2px 0 0 -2px;
