--- a/app/frontend/css/articles.css
+++ b/app/frontend/css/articles.css
@@ -82,11 +82,6 @@
 
 .article-item {
   position: relative;
-  padding: 10px;
-  margin: 10px 0;
-  border-radius: 2px;
-  background: #fff;
-  box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.08), 0 0 1px 0 rgba(0, 0, 0, 0.12);
 }
 
 .article-item .trash {
@@ -121,6 +116,33 @@
   display: table-cell;
   vertical-align: middle;
   text-align: center;
+}
+
+.mobile-table.article-list {
+  width: 100%;
+}
+
+.mobile-table.article-list .category-nav .article-category__item {
+  cursor: pointer;
+  padding: 5px 0;
+}
+
+.mobile-table.article-list .category-nav .article-category__text:hover {
+  text-decoration: underline;
+}
+
+.mobile-table.article-list .category-nav .article-category__item.active span {
+  vertical-align: middle;
+  font-weight: 800;
+  color: #000;
+}
+
+.mobile-table.article-list .category-nav {
+  width: 150px;
+}
+
+.mobile-table.article-list .mobile-table__cel {
+  /*padding: 0;*/
 }
 
 @media only screen and (max-width: 990px) {
