--- a/app/frontend/css/index.css
+++ b/app/frontend/css/index.css
@@ -165,13 +165,13 @@
   transform: translate(-100%, 0)\9;
 }
 
-.slide-modal .close{
+.slide-modal .close {
   position: absolute;
   right: 10px;
   top: 10px;
 }
 
-.slide-modal .close .icon{
+.slide-modal .close .icon {
   font-size: 30px;
 }
 
@@ -407,9 +407,20 @@
 
 .core {
   padding: 20px;
-  max-width: 1000px;
+  max-width: 1100px;
   margin: 10px auto 0;
 }
+
+
+/*react paginate*/
+
+.pagination .prev,
+.pagination .next {
+  position: relative;
+  vertical-align: middle;
+}
+
+/*end of react paginate*/
 
 
 /*full page*/
