--- a/app/frontend/css/layout.css
+++ b/app/frontend/css/layout.css
@@ -1779,6 +1779,14 @@ body .ftf-yuan {
   background: #4a4a4a;
 }
 
+.box {
+  position: relative;
+  padding: 10px;
+  border-radius: 2px;
+  background: #fff;
+  box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.08), 0 0 1px 0 rgba(0, 0, 0, 0.12);
+}
+
 .footer,
 .push {
   min-height: 100px;
