--- a/app/frontend/css/index.css
+++ b/app/frontend/css/index.css
@@ -163,16 +163,25 @@
   transition: transform .4s;
   transform: translate3d(-100%, 0, 0);
   transform: translate(-100%, 0)\9;
+  overflow-y: scroll;
+}
+
+.slide-modal .close-wrapper {
+  position: fixed;
+  padding: 10px;
+  width: 100%;
+  background: #f8f8f8;
+  box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.3), 0 0 1px 0 rgba(0, 0, 0, 0.3);
 }
 
 .slide-modal .close {
-  position: absolute;
-  right: 10px;
-  top: 10px;
+  float: right;
+  transition: all .4s;
 }
 
 .slide-modal .close .icon {
   font-size: 30px;
+  color: #4a4a4a;
 }
 
 .section.intros {
@@ -184,20 +193,23 @@
   background-position: 50% 50%;
 }
 
-.section.design .slide {
+.section.design .slide,
+.section.article {
   text-align: center;
   color: #fff;
   font-size: 2.5em;
   text-shadow: 0px 0px 19px #969696;
 }
 
-.section.design .slide .title .icon {
+.section.design .slide .title .icon,
+.section.article .icon {
   font-size: 40px;
   margin-left: 20px;
   vertical-align: middle;
 }
 
-.section.design .slide .title {
+.section.design .slide .title,
+.section.article .title {
   cursor: pointer;
 }
 
@@ -235,10 +247,39 @@
   background-position: 50% 50%;
 }
 
+.section.article {
+  background: url('../img/article.jpg');
+  background-size: cover;
+  background-position: 50% 50%;
+}
+
 .modal-content {
   box-shadow: 0 0 2px 0 rgba(181, 181, 181, .6)!important;
   border: 1px solid #ccc!important;
   border-radius: 2px!important;
+}
+
+.portfolio-items {
+  margin: 0 auto;
+}
+
+.portfolio-item {
+  /*position: relative;*/
+  margin: 10px;
+  box-shadow: 0 0 2px 0 rgba(181, 181, 181, .6)!important;
+}
+
+.portfolio-item img {
+  width: 100%;
+}
+
+.slide-modal-content {
+  margin-top: 55px;
+  padding: 0 15px;
+}
+
+.portfolio-item-wrapper {
+  padding: 0!important;
 }
 
 
@@ -419,6 +460,7 @@
   position: relative;
   vertical-align: middle;
 }
+
 
 /*end of react paginate*/
 
