--- a/app/frontend/css/layout.css
+++ b/app/frontend/css/layout.css
@@ -47,6 +47,20 @@ body .ftf-yuan {
   opacity: 0;
 }
 
+.clearfix:after {
+  content: "\200B";
+  display: block;
+  height: 0;
+  clear: both;
+}
+
+.clearfix {
+  *zoom: 1;
+}
+
+
+/*IE/7/6*/
+
 
 /* dropdown module */
 
