--- a/app/frontend/css/layout.css
+++ b/app/frontend/css/layout.css
@@ -660,6 +660,12 @@ body .ftf-yuan {
   cursor: default;
 }
 
+.my-button.disabled,
+.my-form-group input.my-button.disabled,
+.disabled {
+  cursor: not-allowed;
+}
+
 
 /* MY GRID */
 
@@ -1811,11 +1817,12 @@ body .ftf-yuan {
   min-height: 100px;
 }
 
-.footer{
+.footer {
   width: 100%;
   display: table;
 }
-.footer-content{
+
+.footer-content {
   display: table-cell;
   vertical-align: middle;
 }
