assets on Qiniu

--- a/app/views/layout/layout.pug
+++ b/app/views/layout/layout.pug
@@ -33,7 +33,7 @@ html
       window.QINIU_DOMAIN = !{ JSON.stringify(qiniuDomain) }
     script(src='/assets/static/js/plupload.full.min.js')
     script(src='https://cdn.staticfile.org/qiniu-js-sdk/1.0.14-beta/qiniu.min.js')
-    script(src=helpers.vendorAssetUrl('react_vendors.js'))
+    script(src=helpers.assetUrl('react_vendors.js'))
     script(src=helpers.assetUrl('common.js'))
     script(src=helpers.assetUrl('base.js'))
     block dynamicJsIe
@@ -48,7 +48,7 @@ html
     script(src='/assets/static/js/plupload.full.min.js')
     script(src='https://cdn.staticfile.org/qiniu-js-sdk/1.0.14-beta/qiniu.min.js')
     script(src='https://cdn.staticfile.org/tinymce/4.5.1/tinymce.min.js')
-    script(src=helpers.vendorAssetUrl('react_vendors.js'))
+    script(src=helpers.assetUrl('react_vendors.js'))
     script(src=helpers.assetUrl('common.js'))
     script(src=helpers.assetUrl('base.js'))
     block dynamicJs
