--- a/app/frontend/css/index.css
+++ b/app/frontend/css/index.css
@@ -166,8 +166,8 @@
   background: #f8f8f8;
   z-index: 24;
   transition: transform .4s;
-  transform: translate3d(-100%, 0, 0);
-  transform: translate(-100%, 0)\9;
+  transform: translate3d(-200%, 0, 0);
+  transform: translate(-200%, 0)\9;
   /*overflow-y: scroll;*/
 }
 
@@ -253,6 +253,8 @@
 .section.article .title,
 .section.contact .title,
 .section.design .slide .title {
+  width: 80%;
+  margin: 0 auto;
   cursor: pointer;
 }
 
@@ -373,7 +375,7 @@
   margin: 0 auto;
 }
 
-.portfolio-items.msie{
+.portfolio-items.msie {
   margin-bottom: 80px;
 }
 
@@ -395,6 +397,7 @@
   position: absolute;
   width: 100%;
   overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 
 .portfolio-item-wrapper {
