--- a/app/views/layout/layout.pug
+++ b/app/views/layout/layout.pug
@@ -51,8 +51,8 @@ html
         | 网站开发, 前端, 设计
     #profile.hidden
       .profile-picture(style="width:300px;height:300px;overflow:hidden")
-        a(href="https://edwardxiao.com")
-          img(src='assets/img/edwardxiao.jpg',alt="Edward Xiao 肖肖梦",style="width:100%;height:auto")
+        a(href="https://edwardxiao.com", alt="Edward Xiao 肖肖梦", rel="nofollow")
+          img(src='assets/img/edwardxiao.jpg', alt="Edward Xiao 肖肖梦", style="width:100%;height:auto")
     block content
     <!--[if lte IE 8]>
     script.
