--- a/app/views/layout/layout.pug
+++ b/app/views/layout/layout.pug
@@ -11,7 +11,7 @@ html
       = title || 'Edward Xiao'
     link(rel='stylesheet' href=helpers.assetUrl('base.css'))
     block dynamicCss
-    link(href=helpers.assetUrl('static/favicon.png') rel="shortcut icon" type="image/png")
+    link(href=helpers.assetUrl('site/favicon.png') rel="shortcut icon" type="image/png")
     meta(name="csrf-param" content="_csrf")
     meta(name="csrf-token" content=csrf)
     script.
@@ -70,6 +70,7 @@ html
       window.__PRELOADED_STATE__ = !{ JSON.stringify(preloadedState) }
     script(src=helpers.assetUrl('vendor/js/plupload.full.min.js'))
     script(src='https://cdn.staticfile.org/qiniu-js-sdk/1.0.14-beta/qiniu.min.js')
+    script(src='https://cdn.staticfile.org/tinymce/4.5.1/tinymce.min.js')
     script(src=helpers.assetUrl('react_vendors.js'))
     script(src=helpers.assetUrl('common.js'))
     script(src=helpers.assetUrl('base.js'))
